Reap LDAP connections inline if multithreading is not enabled

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.2.15, 4.4.7, 5.0.0-rc1
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v5.0, v4.4, v4.2
    • Security 2021-05-31, Security 2021-06-14
    • 134
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      SERVER-55316 ensured that all LDAP connections are reaped in a separate executor driven by another thread rather than inline. However, there is at least one occasion where we should reap the connection inline. This situation is when the LDAP manager's smoke test, performed during server startup before multithreading is enabled, fails and the connection is reaped. Not properly checking whether multithreading is enabled before reaping the connection results in a crash, so there should be an inline default in case the connection reap is occurring while the server is in a single-threaded state.

            Assignee:
            Varun Ravichandran
            Reporter:
            Varun Ravichandran
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: