SERVER-57233: Reap LDAP connections inline if multithreading is not enabled

GitOrigin-RevId: 1428577e1d1d0068d55b704403cd5bf004fa47d9