src/mongo/db/modules/enterprise/src/ldap/connections/windows_ldap_connection.cpp
@@ -263,7 +263,7 @@ Status WindowsLDAPConnection::disconnect() {
         return Status::OK();
     }
 
-    _reaper->schedule(_pimpl->getSession());
+    _reaper->reap(_pimpl->getSession());
 
     _pimpl->getSession() = nullptr;
 
